# geny-executor

./: .gitignore  AUDIT.md  CHANGELOG.md  PLAN.md  PROGRESS.md  README.md  README_ko.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MEMORY_SPEC.yaml
docs/progress/: 2026-04-29_host_selections.md
progress/: blank_manifest_required_active.md  e1_uniformity.md  env_editor_l1.md  env_editor_l1_hotfix.md  stage_capabilities_honest_introspection.md  stage_required_flag.md
progress/memory/: INDEX.md  phase_0_spec_freeze.md  phase_1_interface.md  phase_2_native_providers.md
src/geny_executor/: __init__.py
src/geny_executor/channels/: __init__.py  send_message_channel.py  user_file_channel.py
src/geny_executor/core/: __init__.py  artifact.py  builder.py  config.py  diff.py  environment.py  errors.py  introspection.py  mutation.py  pipeline.py  presets.py  result.py  schema.py  shared_keys.py  slot.py  snapshot.py  stage.py  state.py
src/geny_executor/cron/: __init__.py  runner.py  store_abc.py  types.py
src/geny_executor/cron/store_impl/: __init__.py  file_backed.py  in_memory.py
src/geny_executor/events/: __init__.py  bus.py  types.py
src/geny_executor/history/: __init__.py  ab_test.py  cost.py  models.py  monitor.py  replay.py  service.py
src/geny_executor/hooks/: __init__.py  config.py  events.py  runner.py
src/geny_executor/llm_client/: __init__.py  anthropic.py  base.py  bridge.py  google.py  openai.py  registry.py  types.py  vllm.py
src/geny_executor/llm_client/translators/: __init__.py  _canonical.py
src/geny_executor/memory/: __init__.py  _locks.py  _progressive.py  factory.py  persistence.py  presets.py  provider.py  retriever.py  strategy.py
src/geny_executor/memory/composite/: __init__.py  handles.py  provider.py  routing.py  snapshot.py
src/geny_executor/memory/embedding/: __init__.py  client.py  google.py  local.py  openai.py  registry.py  voyage.py
src/geny_executor/memory/providers/: __init__.py  ephemeral.py
src/geny_executor/notifications/: __init__.py  registry.py
src/geny_executor/permission/: __init__.py  loader.py  matrix.py  types.py
src/geny_executor/runtime/: __init__.py  task_executors.py  task_runner.py
src/geny_executor/security/: __init__.py  import_validator.py  script_sandbox.py
src/geny_executor/session/: __init__.py  freshness.py  manager.py  persistence.py  session.py
src/geny_executor/settings/: __init__.py  loader.py  section_registry.py
src/geny_executor/skills/: __init__.py  bundled_skills.py  fork.py  frontmatter.py  loader.py  mcp_bridge.py  path_match.py  registry.py  shell_blocks.py  skill_tool.py  types.py  watcher.py
src/geny_executor/slash_commands/: __init__.py  md_template.py  parser.py  registry.py  types.py
src/geny_executor/slash_commands/built_in/: __init__.py  _helpers.py  cancel.py  clear.py  compact.py  config.py  context.py  cost.py  help.py  memory.py  model.py  preset_info.py  status.py  tasks.py
src/geny_executor/stages/: __init__.py
src/geny_executor/stages/s01_input/: __init__.py  interface.py  normalizers.py  stage.py  types.py  validators.py
src/geny_executor/stages/s02_context/: __init__.py  compactors.py  interface.py  retrievers.py  stage.py  strategies.py  types.py
src/geny_executor/stages/s03_system/: __init__.py  builders.py  interface.py  stage.py
src/geny_executor/stages/s04_guard/: __init__.py  guards.py  interface.py  stage.py  types.py
src/geny_executor/stages/s05_cache/: __init__.py  interface.py  stage.py  strategies.py
src/geny_executor/stages/s06_api/: __init__.py  _translate.py  interface.py  providers.py  retry.py  stage.py  types.py
src/geny_executor/stages/s07_token/: __init__.py  interface.py  pricing.py  stage.py  trackers.py
src/geny_executor/stages/s08_think/: __init__.py  (+4 more)
src/geny_executor/tools/: __init__.py  adhoc.py  base.py  composer.py  errors.py  provider.py  providers.py  registry.py  sandbox.py  scope.py  stage_binding.py
src/geny_executor/workspace/: __init__.py  stack.py  types.py
tests/completeness/: __init__.py  conftest.py  test_c1_six_layer_retrieval.py  test_c2_execution_recording.py  test_c3_reflection_and_promotion.py  test_c4_rest_coverage.py  test_c5_embedding_migration.py  test_c6_session_resume.py  test_c7_adapter_parity.py  test_spec_loads.py
tests/completeness/fixtures/: __init__.py
tests/contract/: memory_provider_contract.py  test_embedding_clients.py  test_memory_provider_auto_vector.py  test_memory_provider_composite.py  test_memory_provider_composite_routing.py  test_memory_provider_curated_global.py  test_memory_provider_ephemeral.py  test_memory_provider_factory.py  test_memory_provider_file.py  test_memory_provider_file_layout.py  test_memory_provider_file_vector.py  test_memory_provider_sql.py  test_memory_provider_sql_dialect.py  test_memory_provider_sql_schema.py  test_memory_provider_sql_vector.py  test_stage_uniformity.py
tests/integration/: test_cycle_ab_cross_import.py  test_integration.py
tests/unit/: test_adaptive_model_router.py  test_adaptive_thinking_budget.py  test_adhoc_providers.py  test_agent_tool.py  test_artifact_metadata.py  test_ask_user_question_tool.py  test_binary_classify_manifest.py  test_built_in_autoregister.py  test_builtin_capabilities.py  test_builtin_features.py  test_composite_set_hooks.py  test_cron_runner.py  test_cron_store.py  test_cron_tools.py  test_dev_tools.py  test_dynamic_persona_builder.py  test_evaluation_chain.py  test_geny_memory.py  test_geny_retriever_pinned.py  test_geny_retriever_recent_turns.py  test_hierarchical_sidecars.py  test_hook_in_process.py  test_hook_runner.py  test_hooks_and_shared_keys.py  test_index_list_categories.py  test_index_render_vault_map.py  test_interaction_fields.py  test_introspection.py  test_llm_client_base.py  test_llm_client_registry.py  test_llm_client_state.py  test_llm_summary_compactor.py  test_loop_agnostic_lock.py  test_manifest_v2.py  test_manifest_v3_migration.py  test_mcp_annotations_attach.py  test_mcp_credential_store.py  test_mcp_fsm.py  test_mcp_lifecycle.py  test_mcp_namespace.py  (+97 more)
(+280 files in other folders)
