[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geny-executor"
version = "0.46.0"
description = "Harness-engineered agent pipeline library with 21-stage dual-abstraction architecture, built on the Anthropic API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CocoRoF", email = "cocorof@users.noreply.github.com" },
]
keywords = [
    "agent",
    "pipeline",
    "anthropic",
    "claude",
    "harness",
    "ai",
    "llm",
    "mcp",
    "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    # httpx is already a transitive dep via anthropic; declared
    # explicitly because WebFetch imports it directly.
    "httpx>=0.27",
    # Skills system loads SKILL.md frontmatter as YAML.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
memory = [
    "numpy>=1.24",
]
web = [
    # ddgs powers WebSearch (DuckDuckGo text search backend). Pulled in
    # only when hosts actually want web search — keeps the core install
    # lean for pipelines that don't need it.
    "ddgs>=9.11",
]
openai = [
    "openai>=1.50.0",
]
google = [
    "google-genai>=1.0.0",
]
postgres = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    # Optional tool backends needed by the full test suite
    "ddgs>=9.11",
]
all = [
    "geny-executor[memory,openai,google,postgres,web]",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/geny-executor"
Repository = "https://github.com/CocoRoF/geny-executor"
Issues = "https://github.com/CocoRoF/geny-executor/issues"
Documentation = "https://github.com/CocoRoF/geny-executor#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/geny_executor"]

[tool.hatch.build.targets.sdist]
include = [
    "src/geny_executor/",
    "tests/",
    "README.md",
    "README_ko.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "c_phase_1: completeness criterion activated in Phase 1 (Interface)",
    "c_phase_2: completeness criterion activated in Phase 2 (Native Providers)",
    "c_phase_3: completeness criterion activated in Phase 3 (Validation)",
    "c_phase_4: completeness criterion activated in Phase 4 (Web Mirror)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests"]
force-exclude = true
