[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geny-executor"
version = "1.20.0"
description = "Harness-engineered agent pipeline library with 21-stage dual-abstraction architecture, built on the Anthropic API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CocoRoF", email = "cocorof@users.noreply.github.com" },
]
keywords = [
    "agent",
    "pipeline",
    "anthropic",
    "claude",
    "harness",
    "ai",
    "llm",
    "mcp",
    "orchestration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    # Core runtime
    "anthropic>=0.52.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    # httpx — declared explicitly because WebFetch imports it directly
    # (also a transitive dep via anthropic).
    "httpx>=0.27",
    # Skills system loads SKILL.md frontmatter as YAML.
    "pyyaml>=6.0",

    # Memory subsystem
    # numpy: vector arithmetic for VectorHandle helpers + summary
    # statistics in the affect emitter.
    "numpy>=1.24",

    # Scheduled task daemon (geny_executor.cron) — croniter parses +
    # iterates cron expressions.
    "croniter>=2.0",

    # WebSearch tool backend (DuckDuckGo).
    "ddgs>=9.11",

    # Embedding clients — every provider's SDK is a baseline dep so
    # hosts can swap providers via settings.json without re-installing.
    "openai>=1.50.0",
    "google-genai>=1.0.0",

    # SQL provider — sqlite is in stdlib; postgres needs psycopg + pgvector.
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.0",
]

# Optional dev tooling — `pip install geny-executor[dev]` for tests
# and lint. End-users never need these; they stay as an extras group
# so the runtime install footprint isn't bloated by pytest/ruff.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/CocoRoF/geny-executor"
Repository = "https://github.com/CocoRoF/geny-executor"
Issues = "https://github.com/CocoRoF/geny-executor/issues"
Documentation = "https://github.com/CocoRoF/geny-executor#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/geny_executor"]
# Phase 10.4 — bundled skills ship as `SKILL.md` files inside the
# package tree. Hatch's default rules pick up *.py only; force-include
# the markdown so installed wheels still have the bundled catalog.
artifacts = [
    "src/geny_executor/skills/bundled/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/geny_executor/",
    "src/geny_executor/skills/bundled/**/*.md",
    "tests/",
    "README.md",
    "README_ko.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "c_phase_1: completeness criterion activated in Phase 1 (Interface)",
    "c_phase_2: completeness criterion activated in Phase 2 (Native Providers)",
    "c_phase_3: completeness criterion activated in Phase 3 (Validation)",
    "c_phase_4: completeness criterion activated in Phase 4 (Web Mirror)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tests"]
force-exclude = true
